--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import "primeng/resources/themes/lara-light-blue/theme.css";
+@import "primeng/resources/primeng.css";
+
+html, body {
+    height: 100%;
+    background-image: url("https://rare-gallery.com/uploads/posts/975086-Pokmon-tile-cartoon-pattern-gray.jpg");
+}
+
+@media (max-height: 700px) { 
+    html, body {
+        height: 1000px;
+    }
+    
+}
