--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,8 +20,8 @@
                 <label class="text-sm">Nombre</label>
               </span>
             </div>
-            <div class="col d-flex justify-content-end buttonClear">
-                <button pButton label="Clear" (click)="clear(table)" class="p-button-outlined p-button-sm px-2"></button>
+            <div class="col d-flex justify-content-end div-buttonClear">
+                <button pButton (click)="clear(table)" class="p-button-secondary p-button-text px-2"><img class="iconClear" src="../assets/icon/clear.svg" width="25" height="25"></button>
             </div>
           </div>
         </div>
