--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,15 +28,15 @@
       </ng-template>
       <ng-template pTemplate="header">
         <tr>
-          <th pSortableColumn="name" style="width:20%">Nombre <p-sortIcon field="name"></p-sortIcon></th>
+          <th class="th-table" pSortableColumn="name" style="width:20%">Nombre <p-sortIcon field="name"></p-sortIcon></th>
         </tr>
       </ng-template>
       <ng-template pTemplate="body" let-pokemon>
           <tr *ngIf="pokemon !== '\u00A0' && pokemon !== 'No se encontraron resultados.'" role="button" (click)="showDialog(pokemon)" >
-            <td class="row-table-pokemons">{{pokemon}}</td>
+            <td class="td-table row-table-pokemons">{{pokemon}}</td>
           </tr>
           <tr *ngIf="pokemon === '\u00A0' || pokemon === 'No se encontraron resultados.'" >
-            <td class="row-table-empty">{{pokemon}}</td>
+            <td class="td-table row-table-empty">{{pokemon}}</td>
           </tr>
       </ng-template>
     </p-table>
